--- a/.travis.yml
+++ b/.travis.yml
@@ -17,13 +17,10 @@ services:
   - docker
 
 before_script:
-  # Run syntax checks before spawning the test environment
-  - find . -name \*.py -exec python -m py_compile {} +
 
 script:
-  # Run pep8 on all .py files in all subfolders
-  # ignore E402: module level import not at top of file
-  - find . -name \*.py -exec pep8 --ignore=E402 {} +
+  - sh -e ci/pycodestyle_tests.sh
+  - sh -e ci/pylint_tests.sh
 
 after_success:
 
