Make the snapshot name configurable

--- a/bmi_config.cfg
+++ b/bmi_config.cfg
@@ -6,6 +6,9 @@
 # Set it to False for now as there are some glitches.
 uid = <unique number>
 service = <true or false>
+# BMI creates snapshots of images it can provision from, since ceph can clone
+# from snapshots only. So BMI will make snapshot with the name specified here.
+snapshot = bmi_created_snapshot
 
 # this section is for db settings
 [db]
