--- a/tests/unit/common/sample.cfg
+++ b/tests/unit/common/sample.cfg
@@ -3,7 +3,7 @@
 # uid is given so that images dont clash in ceph pool
 uid = 10
 service = False
-
+snapshot = bmi_created_snapshot
 # this section is for db settings
 [db]
 path = /home/bmi/bmi.db
