Bunch of changes to CI
* use the new HIL container built on version 0.3
* copy the config file to the bmi container rather than using what's baked in
That way it will be easy to make changes to the configuration file without making
a new container image everytim.
* the new config file to be copied has the version in the uri

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_script:
   - sleep 30
 
   # Run HIL Container
-  - sudo docker run -d --name hil massopencloud/hil
+  - sudo docker run -d --name hil massopencloud/hil-v03
 
   # Build BMI Container From Environment Image
   - sudo docker pull massopencloud/bmi-ci
