--- a/ci/docker_sources/hil_container/hil.cfg
+++ b/ci/docker_sources/hil_container/hil.cfg
@@ -2,7 +2,7 @@
 log_level = debug
 
 [auth]
-require_authentication = False
+require_authentication = True
 
 [headnode]
 trunk_nic = eth0
@@ -29,7 +29,7 @@ hil.ext.obm.mock =
 # network allocator instead of the null allocator. To do this, comment out the
 # null allocator extension above, and uncomment the following:
 #
-hil.ext.auth.null =
+hil.ext.auth.database =
 hil.ext.network_allocators.vlan_pool =
 
 [hil.ext.network_allocators.vlan_pool]
